--- a/RestoPage/RestoPage/index.html
+++ b/RestoPage/RestoPage/index.html
@@ -213,7 +213,7 @@
            <h3>Event Nights</h3>
         </div>
         <div class="card-body">
-          <p>Get discount vouchers for events like Birthdays, Anniversaries, Valentine's Day and many more.</p>
+          <p>Get discount vouchers for events like Birthdays, Anniversaries, Valentine's Day and many .</p>
           <p></p>
           <button class="btn btn-md btn-block btn-dark" type="button">Get Now</button>
         </div>
