--- a/weatherapp/index.html
+++ b/weatherapp/index.html
@@ -38,6 +38,38 @@
                     </div>
                 </div>
             </div>
+            <div class="details">
+                <div class="col">
+                    <img class="feelscontrast" src="images/feelslike.png">
+                    <div>
+                        <p>Feels Like</p>
+                        <p class="feels-like">50%</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img class="visi" src="images/visibility.png">
+                    <div>
+                        <p>Visibility</p>
+                        <p class="visibility">50%</p>
+                    </div>
+                </div>
+            </div>
+            <div class="details">
+                <div class="col">
+                    <img class="min" src="images/mintemp.png">
+                    <div>
+                        <p>Min Temp</p>
+                        <p class="Min-Temp">50%</p>
+                    </div>
+                </div>
+                <div class="col">
+                    <img class="max" src="images/maxtemp.png">
+                    <div>
+                        <p>Max-Temp</p>
+                        <p class="Max-Temp">50%</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="index.js" charset="UTF-8"></script>
